# fast_lol_client

./: .gitignore  Cargo.toml  README.MD  TODO.MD  config.toml  openapi.json  riot.txt
crates/common/: Cargo.toml
crates/lol_api_generator/: Cargo.toml  TODO.MD
crates/lol_api_generator/src/: lib.rs  main.rs
crates/lol_api_generator/src/generator/: endpoint.rs  enum_repr.rs  mod.rs  object_repr.rs  param.rs  plugin.rs  rust_type.rs  utils.rs
crates/lol_client/: Cargo.toml
crates/lol_client/src/: assets.rs  client.rs  config.rs  lib.rs  main.rs  static_object.rs  utils.rs
crates/lol_client/src/client/: apis.rs  client.rs  mod.rs  utils.rs
crates/lol_client/src/static_object/: champion.rs  profile_icon.rs  summoner_spell.rs
crates/lol_client/src/ui/: application.rs  message.rs  state.rs  view.rs
crates/lol_client/src/ui/view/: chat_view.rs  nav_bar_view.rs  play_view.rs  profile_view.rs
crates/lol_client/src/ui/view/play_view/: champ_select_view.rs  create_lobby_view.rs  end_of_game_view.rs  in_game_view.rs  lobby_view.rs
crates/lol_client/src/ui/view/play_view/create_lobby_view/: create_lobby_coop_ai_view.rs  create_lobby_custom_view.rs  create_lobby_join_custom_view.rs  create_lobby_pvp_view.rs  create_lobby_training_view.rs
crates/lol_client/src/ui/view/profile_view/: profile_icon_selector_view.rs
crates/lol_client/src/ui/widget/: custom_button.rs
crates/lol_client/src/utils/: mod.rs  process_info.rs
crates/plugin_lol_account_verification/: Cargo.toml
crates/plugin_lol_active_boosts/: Cargo.toml
crates/plugin_lol_anti_addiction/: Cargo.toml
crates/plugin_lol_banners/: Cargo.toml
crates/plugin_lol_builtin/: Cargo.toml
crates/plugin_lol_career_stats/: Cargo.toml
crates/plugin_lol_catalog/: Cargo.toml
crates/plugin_lol_challenges/: Cargo.toml
crates/plugin_lol_champ_select/: Cargo.toml
crates/plugin_lol_champ_select_legacy/: Cargo.toml
crates/plugin_lol_champion_mastery/: Cargo.toml
crates/plugin_lol_champions/: Cargo.toml
crates/plugin_lol_chat/: Cargo.toml
crates/plugin_lol_clash/: Cargo.toml
crates/plugin_lol_client_config/: Cargo.toml
crates/plugin_lol_collections/: Cargo.toml
crates/plugin_lol_content_targeting/: Cargo.toml
crates/plugin_lol_cookie_jar/: Cargo.toml
src/: client.rs  config.rs  lib.rs  main.rs  ui.rs  utils.rs
src/client/: mod.rs  (+10 more)
(+285 files in other folders)
