[package]
name = "fast_lol_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
reqwest = { version = "0.12.3", features = ["json", "native-tls"] }
tokio = { version = "1.37.0", features = ["rt", "rt-multi-thread", "macros", "fs"] }
iced = { version = "0.12.1", features = ["highlighter", "tokio", "debug", "advanced", "lazy", "image"] }
iced-box = {version = "0.5.0", features = ["material_icons"]}
base64 = "0.22.1"
toml = "0.8.14"
regex = "1.10.5"
native-tls = "0.2.12"
tokio-tungstenite = { version = "0.23.1" , features = ["native-tls"]}
tungstenite = "0.23.0"
