[package]
name = "lol_api_generator"
version = "0.1.0"
edition = "2021"


[dependencies]
reqwest = "0.12"
openapiv3 = "2.0.0"
convert_case = "0.6.0"
syn = "2.0.71"
serde_json = "1.0.115"
serde = { version = "1.0.197", features = ["derive"] }
regex="1.10"
tokio = { version = "1.38", features = ["rt", "rt-multi-thread", "macros"] }
