[package]
name = "lol_client"
version = "0.1.0"
edition = "2021"


[dependencies]
serde = { version = "1.0.197", features = ["derive"] }
reqwest = { version = "0.12.3", features = ["json", "native-tls"] }
serde_json = "1.0.115"
tokio = { version = "1.37.0", features = ["rt", "rt-multi-thread", "macros", "fs"] }
iced = { version = "0.12.1", features = ["highlighter", "tokio", "debug", "advanced", "lazy", "image"] }
iced-box = {version = "0.5.0", features = ["material_icons"]}
base64 = "0.22.1"
toml = "0.8.14"
regex = "1.10.5"
futures = "0.3.30"
chrono = "0.4.38"
common = { path = "../common" }
plugin_lol_lobby = { path = "../plugin_lol_lobby" }
plugin_lol_chat = { path = "../plugin_lol_chat" }
plugin_lol_champ_select = { path = "../plugin_lol_champ_select" }
plugin_lol_gameflow = { path = "../plugin_lol_gameflow" }
plugin_lol_matchmaking = { path = "../plugin_lol_matchmaking" }
plugin_lol_summoner = { path = "../plugin_lol_summoner" }
plugin_lol_game_queues = { path = "../plugin_lol_game_queues" }
plugin_lol_end_of_game = { path = "../plugin_lol_end_of_game" }

